[package]
name = "cuckoo_filter"
version = "0.1.0"
authors = ["Jack Kilran, WeiXin Fam"]

[lib]
crate-type = ["rlib", "dylib"]
test = true

[dependencies]
redis-module = { version = "0.13.0", features = ["test"]}
lazy_static = "1.4.0"
rand = "0.8.3"
cuckoofilter = "0.3"

[build-dependencies]
cc = "1.0.28"