[package]
name = "CuckooFilter"
version = "0.1.0"
authors = ["Weixin Fam, Xuguang Song, Zihang Wei, Jack Kilrain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.20.0"
probabilistic-collections = "0.7.0"